--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         <h1> <span class="about__name">Luis Valenzuela Cazares.</span></h1>
         <h2 class="about__role">Physicist, Data Scientist.</h2>
         <p class="about__desc">
-         During my career journey through diverse experiments and institutions, I have gained experience in data analysis, 
-         scientific coding, simulation, and research. During these experiences, I have had the privilege to collaborate
-         with diverse groups in a joint effort toward enhancing the performance of the experiments by conducting 
-         physics analysis and developing scientific codes within various simulation frameworks.
+        Throughout my career journey across diverse nuclear physics experiments and institutions, I have built
+        experimental data analysis, R&D, and simulation expertise. I have contributed to physics analyses and
+        code development that optimized large-scale collaborations, gaining a solid foundation in experimental 
+        techniques and teamwork. I look forward to expanding this expertise through a PhD in Experimental
+        Nuclear or High Energy Physics.
         </p>
 
         <div class="about__contact center">
