--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- About -->
       <div class="about center">
         <h1> <span class="about__name">Luis Valenzuela Cazares.</span></h1>
-        <h2 class="about__role">Physicist, Data Scientist.</h2>
+        <h2 class="about__role">Physicist</h2>
         <p class="about__desc">
         Throughout my career journey across diverse nuclear physics experiments and institutions, I have built
         experimental data analysis, R&D, and simulation expertise. I have contributed to physics analyses and
