--- a/index.html
+++ b/index.html
@@ -61,43 +61,23 @@
         Nuclear or High Energy Physics.
         </p>
 
-        <div class="about__contact center">
-          <a href="">
-         <!-- Resume pending   <span class="btn btn--outline">Resume</span> --> 
-          </a>
+   <div class="about__contact center">
+  <a href="https://www.linkedin.com/in/luisvalenzuelacazares/" aria-label="linkedin" class="link link--icon">
+    <i aria-hidden="true" class="fab fa-linkedin"></i>
+  </a>
 
-          <a
-          href="https://www.linkedin.com/in/luisvalenzuelacazares/"
-          aria-label="linkedin"
-          class="link link--icon"
-        >
-          <i aria-hidden="true" class="fab fa-linkedin"></i>
-        </a>
+  <a href="https://github.com/luisval" aria-label="github" class="link link--icon">
+    <i aria-hidden="true" class="fab fa-github"></i>
+  </a>
 
-          <a
-            href="https://github.com/luisval"
-            aria-label="github"
-            class="link link--icon"
-          >
-            <i aria-hidden="true" class="fab fa-github"></i>
-          </a>
+  <a href="https://gitlab.com/luisval" aria-label="gitlab" class="link link--icon">
+    <i aria-hidden="true" class="fab fa-gitlab"></i>
+  </a>
 
-          <a
-          href="https://gitlab.com/luisval"
-          aria-label="gitlab
-          class="link link--icon"
-        >
-          <i aria-hidden="true" class="fab fa-gitlab"></i>
-        </a>
-
-         <a
-          href="https://scholar.google.com/citations?user=KHPELYsAAAAJ&hl=es" 
-          class="link link--icon">
-          >
-          <i aria-hidden="true" class="fas fa-graduation-cap"></i> Scholar
-        </a>
-                  
-        </div>
+  <a href="https://scholar.google.com/citations?user=KHPELYsAAAAJ&hl=es" target="_blank" class="link link--icon">
+    <i aria-hidden="true" class="fas fa-graduation-cap"></i> Scholar
+  </a>
+</div>
       </div>
 
       <!-- Projects -->
