--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
 <section id="publications" class="section publications">
   <h2 class="section__title">Collaboration Articles and Reports</h2>
   <ul>
-    <li>First author, <strong>Firing Pattern for the TPC Calibration Lasers in the sPHENIX Experiment</strong> (2023). DOI: <a href="https://doi.org/10.31274/cc-20240624-740" target="_blank">10.31274/cc-20240624-740</a></li>
-    <li><strong>Precision Studies of QCD in the Low Energy Domain of the EIC</strong> (2023). ArXiv: <a href="https://arxiv.org/abs/2211.15746v3" target="_blank">2211.15746v3</a></li>
-    <li><strong>Status and Initial Physics Performance Studies of the MPD Experiment at NICA</strong> (2022). ArXiv: <a href="https://arxiv.org/abs/2202.08970" target="_blank">2202.08970</a></li>
-    <li><strong>Conceptual Design of the miniBeBe Detector Proposed for NICA-MPD</strong> (2020). ArXiv: <a href="https://arxiv.org/abs/2007.11790" target="_blank">2007.11790</a></li>
-    <li><strong>Core meets corona: a two-component source to explain Λ and Λ− global polarization in semi-central heavy-ion collisions</strong> (2020). ArXiv: <a href="https://arxiv.org/abs/2003.13757" target="_blank">2003.13757</a></li>
-    <li><strong>Time resolution studies for scintillating plastics coupled to silicon photomultipliers</strong> (2019). ArXiv: <a href="https://arxiv.org/abs/1901.04964" target="_blank">1901.04964</a></li>
+    <li>L Valenzuela Cazares (2023). <strong>Firing Pattern for the TPC Calibration Lasers in the sPHENIX Experiment.</strong> DOI: <a href="https://doi.org/10.31274/cc-20240624-740" target="_blank">10.31274/cc-20240624-740</a></li>
+    <li>VD Burkert et al (2023). <strong>Precision Studies of QCD in the Low Energy Domain of the EIC.</strong>ArXiv: <a href="https://arxiv.org/abs/2211.15746v3" target="_blank">2211.15746v3</a></li>
+    <li>V Abgaryan et al (2022). <strong>Status and Initial Physics Performance Studies of the MPD Experiment at NICA.</strong>ArXiv: <a href="https://arxiv.org/abs/2202.08970" target="_blank">2202.08970</a></li>
+    <li>RA Kado et al (2020). <strong>Conceptual Design of the miniBeBe Detector Proposed for NICA-MPD.</strong> ArXiv: <a href="https://arxiv.org/abs/2007.11790" target="_blank">2007.11790</a></li>
+    <li>A Ayala et al (2020). <strong>Core meets corona: a two-component source to explain Λ and Λ− global polarization in semi-central heavy-ion collisions.</strong> ArXiv: <a href="https://arxiv.org/abs/2003.13757" target="_blank">2003.13757</a></li>
+    <li>M Alvarado et al (2019). <strong>Time resolution studies for scintillating plastics coupled to silicon photomultipliers</strong> ArXiv: <a href="https://arxiv.org/abs/1901.04964" target="_blank">1901.04964</a></li>
   </ul>
 </section>
 
