--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1> <span class="about__name">Luis Valenzuela Cazares.</span></h1>
+        <h1> <span class="about__name">Luis Valenzuela Cazares</span></h1>
         <h2 class="about__role">Physicist</h2>
         <p class="about__desc">
         Throughout my career journey across diverse nuclear physics experiments and institutions, I have built
