--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
           <li class="skills__list-item btn btn--plain">Fortran</li>
           <li class="skills__list-item btn btn--plain">C++</li>
           <li class="skills__list-item btn btn--plain">Git</li>
+          <li class="skills__list-item btn btn--plain">Root</li>
           <li class="skills__list-item btn btn--plain">High-Performance Computing</li>
           <li class="skills__list-item btn btn--plain">Machine Learning Algorithms</li>
           <li class="skills__list-item btn btn--plain">Statistical Analysis</li>
