--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
         <a href="mailto:luisval.c@outlook.com">
           <span class="btn btn--outline">Email me</span>
         </a>
+
+        <a href="https://www.linkedin.com/in/luisvalenzuelacazares/" target="_blank" rel="noopener noreferrer">
+        Visit my LinkedIn Profile
+        </a>
+        
       </section>
     </main>
 
