--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </a>
 
         <a href="https://www.linkedin.com/in/luisvalenzuelacazares/" target="_blank" rel="noopener noreferrer">
-        Visit my LinkedIn Profile
+         <span class="btn btn--outline"> Visit my LinkedIn Profile</span>               
         </a>
         
       </section>
