--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
   </a>
 
   <a href="https://github.com/luisval" aria-label="github" class="link link--icon">
-    <i aria-hidden="true" class="fab fa-github"></i>
+   <!-- <i aria-hidden="true" class="fab fa-github"></i> -->
+    <i class="bi bi-github"></i>
   </a>
+     
 
   <a href="https://gitlab.com/luisval" aria-label="gitlab" class="link link--icon">
     <i aria-hidden="true" class="fab fa-gitlab"></i>
