--- a/index.html
+++ b/index.html
@@ -96,13 +96,19 @@
               <li class="project__stack-item">Statistical Analysis</li>
             </ul>
 
-            <a
+       <!--     <a
               href="https://github.com/luisval/tpc/"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
-            </a>         
+            </a>    -->
+
+            <a href="https://github.com/luisval/tpc/" aria-label="source code" class="link link--icon"
+               target="_blank" rel="noopener">
+               <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+
            
           </div>
 
