--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>  
      
-
           </div>
 
           <div class="project">
@@ -151,6 +150,8 @@
             </a>            
            
           </div>
+
+       </div>
 
         <div class="projects__grid">
           <div class="project">
