--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@
         class="link footer__link"
       >
       </a>
+
+      <a href="Your facebook link"><i class="fab fa-facebook"></i></a>
+
     </footer>
 
     <h3>
