--- a/index.html
+++ b/index.html
@@ -66,13 +66,9 @@
     <i aria-hidden="true" class="fab fa-linkedin"></i>
   </a>
 
-<!--  <a href="https://github.com/luisval" aria-label="github" class="link link--icon">
+  <a href="https://github.com/luisval" aria-label="github" class="link link--icon">
     <i aria-hidden="true" class="fab fa-github"></i> 
-  </a> -->
-
-  <a href="https://github.com/luisval" class="link link--icon" target="_blank" rel="noopener">
-   <i class="fab fa-github"></i>
-  </a>
+  </a> 
      
   <a href="https://gitlab.com/luisval" aria-label="gitlab" class="link link--icon">
     <i aria-hidden="true" class="fab fa-gitlab"></i>
