--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </a>
 
   <a href="https://scholar.google.com/citations?user=KHPELYsAAAAJ&hl=es" target="_blank" class="link link--icon">
-    <i aria-hidden="true" class="fas fa-graduation-cap"></i> Scholar
+    <i aria-hidden="true" class="fas fa-graduation-cap"></i> 
   </a>
 </div>
       </div>
