--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
   </a>
 
   <a href="https://github.com/luisval" aria-label="github" class="link link--icon">
-    <i aria-hidden="true" class="fab fa-github"></i> 
+    <i aria-hidden="true" class="fab fa-github"></i> Github
   </a> 
      
   <a href="https://gitlab.com/luisval" aria-label="gitlab" class="link link--icon">
-    <i aria-hidden="true" class="fab fa-gitlab"></i>
+    <i aria-hidden="true" class="fab fa-gitlab"></i> Gitlab
   </a>
 
   <a href="https://scholar.google.com/citations?user=KHPELYsAAAAJ&hl=es" target="_blank" class="link link--icon">
-    <i aria-hidden="true" class="fas fa-graduation-cap"></i> 
+    <i aria-hidden="true" class="fas fa-graduation-cap"></i> Scholar
   </a>
 </div>
       </div>
