--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </a>
 
   <a href="https://github.com/luisval" aria-label="github" class="link link--icon">
-    <i class="fab fa-github"></i>
+    <i aria-hidden="true" class="fab fa-github"></i> 
   </a> 
      
   <a href="https://gitlab.com/luisval" aria-label="gitlab" class="link link--icon">
