--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/rajshekhar26/cleanfolio-minimal"
+        href="https://github.com/rjshkhr/cleanfolio-minimal"
         class="link footer__link"
       >
       </a>
@@ -266,7 +266,7 @@
     </footer>
 
     <h3>
-      <a href="https://rajshekhar26.github.io/cleanfolio-minimal" class="link"
+      <a href="https://github.com/rjshkhr/cleanfolio-minimal" class="link"
         >RS.</a
       >
     </h3>
