--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
   </a> 
      
   <a href="https://gitlab.com/luisval" aria-label="gitlab" class="link link--icon">
-    <i aria-hidden="true" class="fab fa-gitlab"></i> Gitlab
+    <i aria-hidden="true" class="fab fa-gitlab"></i> 
   </a>
 
   <a href="https://scholar.google.com/citations?user=KHPELYsAAAAJ&hl=es" target="_blank" class="link link--icon">
-    <i aria-hidden="true" class="fas fa-graduation-cap"></i> Scholar
+    <i aria-hidden="true" class="fas fa-graduation-cap"></i> 
   </a>
 </div>
       </div>
@@ -247,10 +247,6 @@
         <h2 class="section__title">Contact</h2>
         <a href="mailto:luisval.c@outlook.com">
           <span class="btn btn--outline">Email me</span>
-        </a>
-
-        <a href="https://www.linkedin.com/in/luisvalenzuelacazares/" target="_blank" rel="noopener noreferrer">
-         <span class="btn btn--outline"> Visit my LinkedIn Profile</span>               
         </a>
         
       </section>
