--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+
+           <a
+              href="https://dr.lib.iastate.edu/bitstreams/e1b695b9-b03c-4d3f-ad33-c99d6d356aa6/download"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i class="fa-solid fa-book"></i>
             </a>  
      
           </div>
