--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
             >
               <i class="fa-solid fa-book"></i>
             </a>  
+
+              <a
+              href="https://dr.lib.iastate.edu/bitstreams/e19b5cfb-ed61-4c4b-9e7d-bc95b24d9a47/download"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i class="fas fa-presentation"></i>
+            </a>  
      
           </div>
 
