--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <a class="link link--nav" href="#skills">Skills</a>
           </li>
           <li class="nav__list-item">
+            <a class="link link--nav" href="#publications">Publications</a>
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#contact">Contact</a>
           </li>
         </ul>
