--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
               <i class="fa-solid fa-book"></i>
             </a>  
 
-              <a
+             <a
               href="https://dr.lib.iastate.edu/bitstreams/e19b5cfb-ed61-4c4b-9e7d-bc95b24d9a47/download"
               aria-label="source code"
               class="link link--icon"
             >
-              <i class="fas fa-presentation"></i>
+              <i class="fa-solid fa-presentation"></i>
             </a>  
      
           </div>
