--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               aria-label="source code"
               class="link link--icon"
             >
-              <i class="fa-solid fa-presentation"></i>
+              <i class="fa-solid fa-display"></i>
             </a>  
      
           </div>
