--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-gitlab"></i>
+            </a>      
+
+               <a
+              href="Slides&Notes/CentralityDeterminationMexNICAWorkshop2.pdf"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i class="fa-solid fa-display"></i>
             </a>            
            
           </div>
