--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </a>      
 
                <a
-              href="Slides&Notes/CentralityDeterminationMexNICAWorkshop2.pdf"
+              href="https://gitlab.com/luisval/masterthesis/-/blob/master/Slides&Notes/CentralityDeterminationMexNICAWorkshop2.pdf?ref_type=heads"
               aria-label="source code"
               class="link link--icon"
             >
