--- a/index.html
+++ b/index.html
@@ -174,7 +174,15 @@
               class="link link--icon"
             >
               <i class="fa-solid fa-display"></i>
-            </a>            
+            </a>
+
+                 <a
+              href="https://gitlab.com/luisval/masterthesis/-/raw/master/Slides&Notes/Tesis_presentacion_maestria.pdf?ref_type=heads"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i class="fa-solid fa-display"></i> ES
+            </a>    
            
           </div>
 
