--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>TPC Calibration System for sPHENIX</h3>
+            <h3> TPC Calibration Lasers for sPHENIX experiment </h3>
             <p class="project__description">
-              This project is dedicated to analyzing and developing the TPC calibration lasers at the sPHENIX experiment.              
+              This project focuses on the analysis and development of the TPC laser calibration system for the sPHENIX experiment at Brookhaven National Laboratory (BNL).              
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Scientific Coding</li>
@@ -126,7 +126,7 @@
           </div>
 
           <div class="project">
-            <h3>Data Cleaning for the Electron-Ion Collider</h3>
+            <h3> Pion Background Rejection for the ePIC Detector at the Electron–Ion Collider </h3>
             <p class="project__description">
               A project dedicated to the pion background elimination in the Electron-Ion Collider
                Experiment at Brookhaven National Laboratory.   
@@ -192,7 +192,7 @@
           <div class="project">
             <h3>Optimization of MPD experiment</h3>
             <p class="project__description">
-              A project dedicated to the analysis and software development of detector systems for the
+              A wide project dedicated to the physics analysis and software development of detector systems for the
                Multi-Purpose Detector (MPD) experiment at the Joint Institute for Nuclear Research.       
             </p>
               <ul class="project__stack">
