--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3> Detector R&D and Heavy-Ion Physics Studies for the Multi-Purpose Detector (MPD) experiment </h3>
+            <h3> Detector R&D and Heavy-Ion Physics Studies for the MPD experiment </h3>
             <p class="project__description">
                A wide project dedicated to the physics analysis and software development of detector systems for the
                Multi-Purpose Detector (MPD) experiment at the Joint Institute for Nuclear Research.       
