--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
   <a href="https://scholar.google.com/citations?user=KHPELYsAAAAJ&hl=es" target="_blank" class="link link--icon">
     <i aria-hidden="true" class="fas fa-graduation-cap"></i> 
   </a>
+     
+  <a href="assets/CV.pdf" target="_blank" aria-label="CV" class="link link--icon">
+    <i aria-hidden="true" class="fas fa-file-pdf"></i>
+  </a>
+  <a href="assets/CV.pdf" target="_blank" class="btn btn--outline">
+  Download CV
+  </a>
+     
 </div>
       </div>
 
