--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     <i aria-hidden="true" class="fas fa-graduation-cap"></i> 
   </a>
      
-  <a href="assets/CV.pdf" target="_blank" aria-label="CV" class="link link--icon">
+  <a href="CV.pdf" target="_blank" aria-label="CV" class="link link--icon">
     <i aria-hidden="true" class="fas fa-file-pdf"></i>
   </a>
-  <a href="assets/CV.pdf" target="_blank" class="btn btn--outline">
+  <a href="CV.pdf" target="_blank" class="btn btn--outline">
   Download CV
   </a>
      
